--- a/paper/references.bib
+++ b/paper/references.bib
@@ -56,7 +56,14 @@
   title={{Dengue Control}},
   author={{World Health Organization}},
   year={2020},
-  howpublished={\url{https://www.who.int/denguecontrol/control_strategies/en/}. Access: September, 2020.}
+  howpublished={\url{https://www.who.int/denguecontrol/control_strategies/en/}. Access: 17th of September, 2020.}
+}
+
+@misc{goias2020,
+  title={{Boletim Semanal de Dengue - Goiás 2017: Semana Epidemiológica 1 a 52 (01/01/2017 a 30/12/2017)}},
+  author={{Goiás}},
+  year={2020},
+  howpublished={\url{https://extranet.saude.go.gov.br/pentaho/api/repos/%3Adengue%3Apaineis%3Aresumo_boletim.wcdf/generatedContent?ano=2017&semana=52}. Access: 7th of October, 2020.}
 }
 
 @article{siddiqui2016use,
@@ -112,6 +119,77 @@
   pages={178--183},
   year={2005},
   publisher={LWW}
+}
+
+@article{clemens2014physicians,
+  title={{Do Physicians' Financial Incentives Affect Medical Treatment and Patient Health?}},
+  author={Clemens, Jeffrey and Gottlieb, Joshua D},
+  journal={American Economic Review},
+  volume={104},
+  number={4},
+  pages={1320--49},
+  year={2014}
+}
+
+@article{scott2011effect,
+  title={{The Effect of Financial Incentives on the Quality of Health Care Provided by Primary Care Physicians}},
+  author={Scott, Anthony and Sivey, Peter and Ouakrim, Driss Ait and Willenberg, Lisa and Naccarella, Lucio and Furler, John and Young, Doris},
+  journal={Cochrane Database of Systematic Reviews},
+  number={9},
+  year={2011},
+  publisher={John Wiley \& Sons, Ltd}
+}
+
+@article{langdown2014use,
+  title={{The Use of Financial Incentives to Help Improve Health Outcomes: Is the Quality and Outcomes Framework Fit for Purpose? A Systematic Review}},
+  author={Langdown, Carwyn and Peckham, Stephen},
+  journal={Journal of Public Health},
+  volume={36},
+  number={2},
+  pages={251--258},
+  year={2014},
+  publisher={Oxford University Press}
+}  
+
+@article{doran2017impact,
+  title={{Impact of Provider Incentives on Quality and Value of Health Care}},
+  author={Doran, Tim and Maurer, Kristin A and Ryan, Andrew M},
+  journal={Annual Review of Public Health},
+  volume={38},
+  pages={449--465},
+  year={2017},
+  publisher={Annual Reviews}
+}
+
+@article{jha2012long,
+  title={{The Long-Term Effect of Premier Pay for Performance on Patient Outcomes}},
+  author={Jha, Ashish K and Joynt, Karen E and Orav, E John and Epstein, Arnold M},
+  journal={New England Journal of Medicine},
+  volume={366},
+  number={17},
+  pages={1606--1615},
+  year={2012},
+  publisher={Mass Medical Soc}
+}
+
+@article{fainman2020design,
+  title={{Design of Financial Incentives and Payment Schemes in Healthcare Systems: A Review}},
+  author={Fainman, Emily Zhu and Kucukyazici, Beste},
+  journal={Socio-Economic Planning Sciences},
+  pages={100901},
+  year={2020},
+  publisher={Elsevier}
+}
+
+@article{bassani2013financial,
+  title={{Financial Incentives and Coverage of Child Health Interventions: A Systematic Review and Meta-Analysis}},
+  author={Bassani, Diego G and Arora, Paul and Wazny, Kerri and Gaffey, Michelle F and Lenters, Lindsey and Bhutta, Zulfiqar A},
+  journal={BMC Public Health},
+  volume={13},
+  number={S3},
+  pages={S30},
+  year={2013},
+  publisher={Springer}
 }
 
 @article{burgess2003role,
@@ -170,7 +248,7 @@
   title={{About Dengue: What You Need to Know}},
   author={{Center for Disease Control}},
   year={2020},
-  howpublished={\url{https://www.cdc.gov/dengue/about/index.html}. Access: September, 2020.}
+  howpublished={\url{https://www.cdc.gov/dengue/about/index.html}. Access: 17th of September, 2020.}
 }
 
 @article{sridhar2018effect,
@@ -269,7 +347,7 @@
   publisher={Elsevier}
 }
 @article{britton2016teacher,
-  title={Teacher pay and school productivity: Exploiting wage regulation},
+  title={{Teacher Pay and School Productivity: Exploiting Wage Regulation}},
   author={Britton, Jack and Propper, Carol},
   journal={Journal of Public Economics},
   volume={133},
@@ -279,7 +357,7 @@
 }
 
 @article{duflo2012incentives,
-  title={Incentives work: Getting teachers to come to school},
+  title={{Incentives Work: Getting Teachers to Come to School}},
   author={Duflo, Esther and Hanna, Rema and Ryan, Stephen P},
   journal={American Economic Review},
   volume={102},
@@ -289,14 +367,14 @@
 }
 
 @techreport{gertler2013using,
-  title={Using performance incentives to improve medical care productivity and health outcomes},
+  title={{Using Performance Incentives to Improve Medical Care Productivity and Health Outcomes}},
   author={Gertler, Paul and Vermeersch, Christel},
   year={2013},
   institution={National Bureau of Economic Research}
 }
 
 @article{muthmainnah2017improving,
-  title={Improving nurses’ performance through remuneration: a literature review},
+  title={{Improving Nurses' Performance through Remuneration: A Literature Review}},
   author={Muthmainnah, Achir Yani Syuhaimie Hamid and Hariyati, Rr Tutik Sri},
   journal={Enferm Clin},
   volume={27},
@@ -529,8 +607,8 @@
   publisher={JSTOR}
 }
 
-@article{Banerjeeetal2008,
-  title={Putting a Band-Aid on a corpse: Incentives for nurses in the Indian public health care system},
+@article{banerjee2008bandaid,
+  title={{Putting a Band-Aid on A Corpse: Incentives for Nurses in the Indian Public Health Care System}},
   author={Banerjee, Abhijit V and Duflo, Esther and Glennerster, Rachel},
   journal={Journal of the European Economic Association},
   volume={6},
@@ -538,15 +616,6 @@
   pages={487--500},
   year={2008},
   publisher={Wiley Online Library}
-}
-
-@article{Dufloetal2012,
-  title={Incentives work: Getting teachers to come to school},
-  author={Duflo, Esther and Hanna, Rema and Ryan, Stephen P},
-  journal={The American Economic Review},
-  pages={1241--1278},
-  year={2012},
-  publisher={JSTOR}
 }
 
 @article{Castilloetal2014,
@@ -569,8 +638,8 @@
   publisher={Elsevier}
 }
 
-@article{Ashrafetal2014c,
-  title={No margin, no mission? A field experiment on incentives for public service delivery},
+@article{ashrafetal2014margin,
+  title={{No Margin, No Mission? A Field Experiment on Incentives for Public Service Delivery}},
   author={Ashraf, Nava and Bandiera, Oriana and Jack, B Kelsey},
   journal={Journal of Public Economics},
   volume={120},
@@ -580,7 +649,7 @@
 }
 
 @article{bandiera2013team,
-  title={Team incentives: Evidence from a firm level experiment},
+  title={{Team Incentives: Evidence from a Firm Level Experiment}},
   author={Bandiera, Oriana and Barankay, Iwan and Rasul, Imran},
   journal={Journal of the European Economic Association},
   volume={11},
@@ -633,8 +702,8 @@
   institution={National Bureau of Economic Research}
 }
 
-@article{Ashrafetal2014a,
-  title={Do-gooders and go-getters: career incentives, selection, and performance in public service delivery},
+@article{ashrafetal2014gooders,
+  title={{Do-Gooders and Go-Getters: Career Incentives, Selection, and Performance in Public Service Delivery}},
   author={Ashraf, Nava and Bandiera, Oriana and Lee, Scott S and others},
   journal={STICERD-Economic Organisation and Public Policy Discussion Papers Series},
   volume={54},
@@ -642,8 +711,8 @@
   publisher={Suntory and Toyota International Centres for Economics and Related Disciplines, LSE}
 }
 
-@article{Blimpo2014,
-  title={Team incentives for education in developing countries: A randomized field experiment in Benin},
+@article{blimpo2014team,
+  title={{Team Incentives for Education in Developing Countries: A Randomized Field Experiment in Benin}},
   author={Blimpo, Moussa P},
   journal={American Economic Journal: Applied Economics},
   volume={6},
